Make NetworkChangeNotifierAndroid handle registerNetworkCallback failure

On certain devices ConnectivityManager.registerNetworkCallback fails
unexpectedly.  Handle this by disabling network-specific callbacks
and network binding.

Bug: 791025
Change-Id: I41054c8e373d9ae6cca99d845280ca56575ccf54