net/android/network_change_notifier_delegate_android.h
@@ -116,6 +116,12 @@ class NET_EXPORT_PRIVATE NetworkChangeNotifierDelegateAndroid {
   // Is the current process bound to a specific network?
   bool IsProcessBoundToNetwork();
 
+  // Returns true if NetworkCallback failed to register, indicating that
+  // network-specific callbacks will not be issued.
+  bool RegisterNetworkCallbackFailed() const {
+    return register_network_callback_failed_;
+  }
+
  private:
   friend class BaseNetworkChangeNotifierAndroidTest;
 
@@ -146,7 +152,11 @@ class NET_EXPORT_PRIVATE NetworkChangeNotifierDelegateAndroid {
 
   base::ThreadChecker thread_checker_;
   scoped_refptr<base::ObserverListThreadSafe<Observer>> observers_;
-  base::android::ScopedJavaGlobalRef<jobject> java_network_change_notifier_;
+  const base::android::ScopedJavaGlobalRef<jobject>
+      java_network_change_notifier_;
+  // True if NetworkCallback failed to register, indicating that
+  // network-specific callbacks will not be issued.
+  const bool register_network_callback_failed_;
 
   mutable base::Lock connection_lock_;  // Protects the state below.
   ConnectionType connection_type_;
